--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,7 @@
 	<!-- The Canvas -->
     <div id="templateCanvas"></div>
 	
-	<!-- External javascript libraries -->
-  <script src="https://fb.me/react-15.0.0.js"></script>
-  <script src="https://fb.me/react-dom-15.0.0.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js"></script>
-	<!-- Internal Javascript files -->
-  <script type="text/babel" src="js/TemplateCanvas.jsx"></script>
+	<!-- Webpack bundled javascript library -->
+  <script src="./build/bundle.js"></script>
   </body>
 </html>
